Filminas de Clase

--- a/Trabajos Practicos/Tp 6/ISW-G11-2023-Tp-6/src/app/forma-de-envio/forma-de-envio.component.html
+++ b/Trabajos Practicos/Tp 6/ISW-G11-2023-Tp-6/src/app/forma-de-envio/forma-de-envio.component.html
@@ -2,7 +2,7 @@
 
 <div name="FormasDeEnvio" class="dive" >
     <select #formaEnvio class="form-select" id="inputMailMethod" (change)="onSelected2(formaEnvio.value)">
-        <option value="" disabled selected>Elija un metodo de pago</option>
+        <option value="" disabled selected>Cuando quiere recibirlo</option>
         <option value="0">Lo Antes Posible</option>
         <option value="1">Fecha Y Hora Especifica</option>
       </select>  
