Validacion de imagen

--- a/Trabajos Practicos/Tp 6/ISW-G11-2023-Tp-6/src/app/pedido/pedido.component.html
+++ b/Trabajos Practicos/Tp 6/ISW-G11-2023-Tp-6/src/app/pedido/pedido.component.html
@@ -18,7 +18,7 @@
      
         <div class="mb-3">
             <label for="formFile" class="form-label">Foto (Opcional)</label>
-            <input class="form-control" type="file" id="formFile" accept="image/png, image/gif, image/jpeg" (change)= "validateSize()">
+            <input class="form-control" type="file" id="formFile" accept="image/png, image/gif, image/jpeg" (change)= "validateSize($event)">
         </div>
         <h4>Direccion de Comercio</h4>
         <div class="col-6">
