--- a/Trabajos Practicos/Tp 6/ISW-G11-2023-Tp-6/src/app/pedido/pedido.component.html
+++ b/Trabajos Practicos/Tp 6/ISW-G11-2023-Tp-6/src/app/pedido/pedido.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <h3> Pedido a Cadete ? </h3>
+    <h2> Pedido a Cadete </h2>
     <form class="row g-3 needs-validation" name="FormPedido" [formGroup]='FormRegistroPedido' novalidate>
         <div class="col-md-12">
             <label for="inputDescription" class="form-label" for="descripcion">Que va a buscar el cadete?</label>
@@ -18,7 +18,10 @@
      
         <div class="mb-3">
             <label for="formFile" class="form-label">Foto (Opcional)</label>
-            <input class="form-control" type="file" id="formFile" accept="image/png, image/gif, image/jpeg" (change)= "validateSize($event)">
+            <input class="form-control" type="file" id="formFile" accept="image/png, image/gif, image/jpeg" formControlName="Foto" (change)= "validateSize($event)">
+            <div class="validacion" style="color:red ;" *ngIf="boolsizefoto"> 
+              La foto es mayor a 5 Mib.
+          </div>
         </div>
         <h4>Direccion de Comercio</h4>
         <div class="col-6">
@@ -41,7 +44,7 @@
                 </div>
     
                 <div class="validacion" style="color:red ;" *ngIf="errorDePatron('NumeroComercio') "> 
-                    Dato texto, 4 a 55 caracteres.
+                    Dato Numero, solo se aceptan numeros y hasta 5 caracteres
                 </div>
           </div>
         <div class="col-md-12">
@@ -77,7 +80,7 @@
                 </div>
     
                 <div class="validacion" style="color:red ;" *ngIf="errorDePatron('NumeroEntrega') "> 
-                    Dato texto, 4 a 55 caracteres.
+                  Dato Numero, solo se aceptan numeros y hasta 5 caracteres
                 </div>
           </div>
         <div class="col-md-12">
@@ -92,9 +95,10 @@
             <label for="inputDeliveryReference" class="form-label">Referencia</label>
             <textarea  type="text" class="form-control" id="inputDeliveryReference" rows="3" placeholder="Referencia" style="resize: none"  ></textarea>
         </div>
+        <hr>
 
-        <div class="navigation row justify-content-end">
-            <button type="button" [disabled]="FormRegistroPedido.invalid" class="btn btn-primary col-3" (click)="continuar()">Continuar</button>
+        <div class="navigation  justify-content-center">
+            <button type="button"  style="float:right;" [disabled]="validateForm()" class="btn btn-primary" (click)="continuar()">Continuar</button>
         </div>
         
 
