--- a/Trabajos Practicos/Tp 6/ISW-G11-2023-Tp-6/src/app/forma-de-pago/forma-de-pago.component.html
+++ b/Trabajos Practicos/Tp 6/ISW-G11-2023-Tp-6/src/app/forma-de-pago/forma-de-pago.component.html
@@ -26,7 +26,7 @@
        
             </div>
             <div class="validacion" style="color:red ;" *ngIf="errorMonto('MontoEfectivo',FormRegistroPagoEfectivo) "> 
-                El monto debe ser mayor o igual al total
+                El monto debe ser mayor o igual al total y no superar los $30.000
             </div>
     </div>
     </form>
